Fixed spacing
Fixed the spacing in the blog page

--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -16,10 +16,13 @@ h1, h2, h3, h4, h5, h6{
 }
 footer{
     background-color: rgba(176, 231, 238, 0.6);
+    bottom: 0;
     color:#000000;
     font-size:.9em;
     margin-top: 4em;
     padding:1.11em 0;
+    position: fixed;
+    width: 100%;
 }
 /* CLASSES */
 .blog-post header{
@@ -36,10 +39,10 @@ footer{
     margin-top:2em;
     margin-bottom:2em
 }
-.rounded-image img {
+.rounded-image img{
     display: block;
     width: 100%;
-    border-radius: 40px;
+    border-radius: 60px;
 }
 .subtitle{
     margin-top : 2em;
@@ -205,7 +208,6 @@ footer{
         position: relative;
         transform: translateX(-43%);
     }
-    
     .about-image figcaption, .image figcaption {
         font-size: .75em;
         margin-top: .5em;
